# fractran

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: decide.rs  enum.rs  lib.rs  sim.rs
src/deciders/: agnostic.rs  mod.rs
src/program/: arr2d.rs  enumerate.rs  mod.rs  program.rs
