[package]
name = "fractran"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sim"
path = "src/sim.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"

[[bin]]
name = "decide"
path = "src/decide.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
number-theory = "0.0.25"
z3 = "0.19.6"

[profile.release]
codegen-units=1
lto="fat"
